# oxidetalis

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  Justfile  LICENSE-MIT  README.md  cliff.toml  docker-compose.yml  rust-toolchain.toml  rustfmt.toml
.forgejo/: pull_request_template.md
.forgejo/ISSUE_TEMPLATE/: bug.md  feature_request.md
.forgejo/workflows/: cd.yml  changelog.yml  ci.yml  contributors.yml  dco_checker.yml
.github/workflows/: auto_close_pr.yml
crates/oxidetalis/: Cargo.toml  Dockerfile
crates/oxidetalis/src/: errors.rs  extensions.rs  macros.rs  main.rs  nonce.rs  utils.rs
crates/oxidetalis/src/database/: in_chat_requests.rs  incoming_chat.rs  mod.rs  out_chat_requests.rs  user.rs  user_status.rs
crates/oxidetalis/src/middlewares/: mod.rs  public_key.rs  signature.rs
crates/oxidetalis/src/parameters/: mod.rs  pagination.rs
crates/oxidetalis/src/routes/: errors.rs  mod.rs  user.rs
crates/oxidetalis/src/schemas/: mod.rs  user.rs
crates/oxidetalis/src/websocket/: errors.rs  mod.rs
crates/oxidetalis/src/websocket/events/: client.rs  mod.rs  server.rs
crates/oxidetalis/src/websocket/handlers/: chat_request.rs  mod.rs
crates/oxidetalis_config/: Cargo.toml  README.md
crates/oxidetalis_config/src/: commandline.rs  defaults.rs  lib.rs  serde_with.rs  types.rs
crates/oxidetalis_core/: Cargo.toml
crates/oxidetalis_core/src/: cipher.rs  lib.rs
crates/oxidetalis_core/src/types/: cipher.rs  impl_openapi.rs  impl_sea_orm.rs  impl_serde.rs  mod.rs  size.rs
crates/oxidetalis_entities/: Cargo.toml  README.md
crates/oxidetalis_entities/src/: incoming_chat.rs  incoming_chat_requests.rs  lib.rs  outgoing_chat_requests.rs  prelude.rs  users.rs  users_status.rs
crates/oxidetalis_migrations/: Cargo.toml  README.md
crates/oxidetalis_migrations/src/: create_incoming_chat_requests_table.rs  create_incoming_chat_table.rs  create_outgoing_chat_requests_table.rs  create_users_status.rs  create_users_table.rs  lib.rs
